# gothog_music_player

./: .gitignore  README.md  gothog-music-player.in  meson.build  requirements.txt  run.py
data/: gothog-music-player.desktop
src/: __init__.py  main.py
src/core/: __init__.py  audio_player.py  downloader.py  playlist_manager.py
src/data/: app_config.json  playlist_schema.json
src/ui/: __init__.py  main_window.py  player_controls.py  playlist_sidebar.py  track_list.py
src/utils/: __init__.py  file_utils.py  metadata_utils.py
